# bifold

./: .gitignore  LICENSE  README.md  pyproject.toml
bifold/: __main__.py
bifold/conf/: config.yaml
bifold/conf/dataset/: bimanual.yaml  bimanual_sequential.yaml  none.yaml  real.yaml  single.yaml  single_sequential.yaml
bifold/conf/loss/: bce_gaussmap.yaml  bce_mask.yaml  composed.yaml  composed_dice_focal.yaml
bifold/conf/model/: rgb_clip.yaml  siglip.yaml  siglip_sequential.yaml  text_unet.yaml
bifold/conf/processor/: default.yaml
bifold/conf/scheduler/: linear_warmup.yaml
bifold/data/: __init__.py  bimanual_dataset.py  bimanual_dataset_sequential.py  create_dataset_partitions.py  depth_augmentations.py  mask_augmentations.py  processor.py  real_dataset.py  single_dataset.py  single_dataset_sequential.py  utils.py  vr_folding_utils.py
bifold/env/: __init__.py  create_softgym_meshes.py  softgym_cloth_env.py  softgym_demonstrators.py  softgym_evaluator.py  softgym_utils.py  utils.py
bifold/env/assets/: material.mtl  template.xml  texture.mtl
bifold/losses/: __init__.py
bifold/metrics/: __init__.py  utils.py
bifold/models/: __init__.py  fusion.py  modules.py  pickplace.py  rgb_clip.py  siglip.py  text_unet.py  transformer.py  utils.py
bifold/models/clip/: __init__.py  model.py
bifold/optim/: __init__.py
bifold/utils/: visualization.py
scripts/: create_unimanual_sequential_dataset.py
scripts/bimanual_real/: annotate_actions.ipynb  create_crops_w_mask.py  create_masks.py
scripts/rendering/: create_textured_objs.py  render.py  render_view_blenderproc.py  run_all_renders_actions.py
